--- a/ch18_image/src/main/AndroidManifest.xml
+++ b/ch18_image/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstApplication"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".AuthActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
