--- a/ch18_image/src/main/AndroidManifest.xml
+++ b/ch18_image/src/main/AndroidManifest.xml
@@ -9,11 +9,14 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstApplication"
-        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".PhpActivity"
+            android:exported="false" />
         <activity
             android:name=".AddActivity"
             android:exported="false"
